Sun Nov 06 00:49:45 GMT 2011  Olly Betts <olly@survex.com>

	* api/,backends/brass/,backends/chert/,backends/dbfactory_remote.cc,
	  backends/inmemory/inmemory_database.cc,
	  backends/multi/multi_termlist.cc,backends/remote/net_postlist.cc,
	  backends/remote/net_termlist.h,backends/remote/remote-database.cc,
	  bin/,common/,expand/,matcher/,net/,tests/internaltest.cc,
	  weight/Makefile.mk,weight/weightinternal.h: Move even more headers
	  out of common and next to their corresponding C++ file.

Sat Nov 05 23:55:55 GMT 2011  Olly Betts <olly@survex.com>

	* api/replication.cc,backends/Makefile.mk,
	  backends/brass/brass_databasereplicator.h,
	  backends/chert/chert_databasereplicator.h,
	  backends/databasereplicator.h,common/Makefile.mk,
	  common/databasereplicator.h: Move databasereplicator.h from common to
	  backends.

Sat Nov 05 23:51:40 GMT 2011  Olly Betts <olly@survex.com>

	* backends/Makefile.mk: Fix sort order of noinst_HEADERS.

Sat Nov 05 23:50:33 GMT 2011  Olly Betts <olly@survex.com>

	* api/documentvaluelist.h,api/omdatabase.cc,api/valueiterator.cc,
	  backends/Makefile.mk,backends/brass/,backends/chert/,
	  backends/inmemory/inmemory_database.cc,
	  backends/multi/multi_valuelist.cc,backends/multivaluelist.h,
	  backends/valuelist.h,backends/valuestats.h,bin/xapian-check-brass.cc,
	  bin/xapian-check-chert.cc,common/,matcher/valuerangepostlist.h,
	  matcher/valuestreamdocument.h: Move multivaluelist.h, valuelist.h and
	  valuestats.h from common to backends.

Sat Nov 05 23:40:49 GMT 2011  Olly Betts <olly@survex.com>

	* api/,backends/brass/brass_postlist.h,backends/chert/chert_postlist.h,
	  backends/contiguousalldocspostlist.h,backends/database.cc,
	  backends/inmemory/inmemory_database.h,
	  backends/multi/multi_postlist.h,backends/remote/net_postlist.h,
	  backends/remote/remote-database.cc,common/,matcher/: Move
	  emptypostlist.h, leafpostlist.h and postlist.h from common to api.

Sat Nov 05 23:31:14 GMT 2011  Olly Betts <olly@survex.com>