@@ -26,6 +26,7 @@
 #include "api_replicate.h"
 
 #include <xapian.h>
+#include "replication.h"
 
 #include "apitest.h"
 #include "dbcheck.h"
